Collecting data and mocking system input Generation of assertion improved